fix issues.